chore: resolve sonar issues
* fix: Prevent unauthorized access to temporary directories

* refactor: Replace Stream.collect(Collectors.toList()) with Stream.toList()

* refactor: rename package adminOnly -> adminonly

* refactor: Bind path variable "reviewId" to a method parameter.

* refactor: Rename apikKey -> apiKeyToVerify in ApiKeyAuthenticator::retrieveUser

* refactor: Replace RemoteJWKSet to JWKSourceBuilder

* refactor: Remove the parentheses around the "exceptionHandler" parameter

* refactor: Remove the parentheses around the "authorize" parameter

* refactor: extract repeated URL pattern into a constant

* refactor: Remove the declaration of thrown exception 'java.lang.Exception

* refactor: Remove this unused "objectMapper" private field.

* "refactor: define constant for duplicated 'Cognito response' literal"

* fix: explicitly set credentials provider on Cognito client builder

* refactor: Replace  'Stream.collect(Collectors.toList())' with 'Stream.toList()'